# 100_project_challenge

./: README.md  main.py  questions.py  unit_converter.py
01_quiz_app/: main.py  questions.py
02.chatbot/: .env  main.py  terminal.py
02_qa_chatbot/: .env  .gitignore  README.md
03_password_generator/: README.md  password_generator.py
04_stateful_agentic_chatbot/: .env  main.py  pyproject.toml
05_Oauth_stateful_agent_chatbot/: .env.example  README.md  main.py
08_psychologist_agent/: .env  README.md  main.py  pyproject.toml
09_guardrail_agent/: .env  README.md  input_guard.py  main.py  output_guard.py  pyproject.toml  setup_config.py
10_fastapi_agent/: .env  README.md  main.py  pyproject.toml
11_news_agent/: README.md  example_.env  lengthy.py  main.py  pyproject.toml
12_location_tracker_agent/: .env_example  README.md  main.py  pyproject.toml
13_cryptotracker_agent/: README.md  main.py  pyproject.toml  sample_.env
14_github_mcpserverclient_agent/: .env  dani.py  github_client.py  github_server.py  pyproject.toml
fastapi_chainlit_agent/: .env
psychologist_agent/: .env
quiz_app/: README.md
