[project]
name = "fastapi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "fastapi[standard]>=0.115.12",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "openai-agents>=0.0.16",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]
